@@ -28,19 +28,9 @@
 
 namespace KJS {
 
-void ScopeChain::push(const ScopeChain &c)
-{
-    ScopeChainNode **tail = &_node;
-    for (ScopeChainNode *n = c._node; n; n = n->next) {
-        ScopeChainNode *newNode = new ScopeChainNode(*tail, n->object);
-        *tail = newNode;
-        tail = &newNode->next;
-    }
-}
-
 #ifndef NDEBUG
 
-void ScopeChain::print() const
+void ScopeChainNode::print() const
 {
     ScopeChainIterator scopeEnd = end();
     for (ScopeChainIterator scopeIter = begin(); scopeIter != scopeEnd; ++scopeIter) {
